[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gis_plot"
version = "0.1.0"
description = "Plotting tool for Zivilschutz GIS maps to A0 PDF"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "owslib>=0.29",
    "matplotlib>=3.8",
    "Pillow>=10.0",
    "requests>=2.31",
]

[project.scripts]
gis-plot = "app:main"
